--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 
 
 :root{
-    --cor-de-fundo: #1E1E1E;
-    --roxo: #6871d5;
+    --cor-de-fundo: #58006e;
+    --roxo: #f8f8f8;
     --branco: #FFFFff;
-    --botao-ativo: #09062c;
-    --botao-inativo: rgba(143, 9, 9, 0.5);
+    --botao-ativo: #6e4ea1;
+    --botao-inativo: rgba(55, 7, 119, 0.5);
     --texto-fundo: rgba(58,55,94,0.3);
 }
 
@@ -25,4 +25,58 @@ body{
     align-items: center;
     max-width: 1200px;
     
+}
+
+
+.titulo-principal {
+    text-align: left;
+    width: 100%;
+    font-size: 32px;
+}
+
+.titulo-principal span {
+    color: var(--verde);
+}
+
+.botao {
+    font-family: 'Chakra Petch', sans-serif;
+    background-color: var(--botao-inativo);
+    color: var(--branco);
+    display: flex;
+    justify-content: center;
+    padding: 1em;
+    font-size: 18px;
+    align-items: center;
+    width: 100%;
+    border-bottom: 4px solid var(--botao-ativo);
+    border-left: 2px solid var(--botao-ativo);
+    border-right: 2px solid var(--botao-ativo);
+    border-top: none;
+}
+
+.botao:first-child {
+    border-radius: 40px 40px 0 0;
+}
+
+.botoes {
+    display: block;
+}
+
+.ativo{
+    background-color: var(--botao-ativo);
+    border-bottom: 4px solid var(--verde);
+}
+
+@media screen and (min-width: 768px) {
+    .botoes {
+        display: flex;
+    }
+
+    .botao:first-child {
+        border-radius: 40px 0 0 0;
+    }
+
+    .botao:last-child {
+        border-radius: 0 40px 0 0;
+    }
 }
